Updated file names

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,6 +1,6 @@
---------------------
+-----------------------
 Installing Round Eights
---------------------
+-----------------------
 
 Round Eights comes in two flavours, the raw source files and the single file PHP
 archive. Both are equivilent as far as functionality is concerned.
@@ -15,7 +15,7 @@ is all you need. Simply copy it to your chosen destination, and include it like
 you would any other file, for example:
 
 <?php
-require_once "/path/to/Round Eights.phar";
+require_once "/path/to/RoundEights.phar";
 ?>
 
 For more information about phar files, visit the PHP manual here:
@@ -31,7 +31,7 @@ Optionally, you may simply copy the "src" directory and all of its contents to
 your code base, and include the contained "Round Eights.php" file, for example:
 
 <?php
-require_once "/path/to/src/Round Eights.php";
+require_once "/path/to/src/RoundEights.php";
 ?>
 
 
@@ -39,5 +39,5 @@ require_once "/path/to/src/Round Eights.php";
 Requirements
 ------------
 
-Round Eights requires version 5.3 or later of PHP. There are a few components that
+Round Eights requires version 5.3.1 or later of PHP. There are a few components that
 require specific PHP extensions.
